--- a/tela/midia-quiries.css
+++ b/tela/midia-quiries.css
@@ -31,14 +31,24 @@
     }
 
     section#login div#imagem {
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
 
     section#login div#Formulario {
-        float: right;
+        float: left;
         width: 50%;
     }
+
+    div#Formulario h1 {
+        font-size: 2em;
+    }
+
+    div#Formulario p {
+        font-size: 1.2em;
+        text-align: justify;
+    }
+    
     
 }
