--- a/tela/midia-quiries.css
+++ b/tela/midia-quiries.css
@@ -7,6 +7,7 @@
     }
     section#login {
         width: 80vw;
+        height: 280px;
     }
 
     section#login div#imagem {
@@ -28,6 +29,7 @@
     }
     section#login {
         width: 950px;
+        height: 350px;
     }
 
     section#login div#imagem {
@@ -48,6 +50,7 @@
     div#Formulario p {
         font-size: 1.2em;
         text-align: justify;
+        margin: 20px 0px;
     }
     
     
