--- a/tela/style.css
+++ b/tela/style.css
@@ -32,8 +32,8 @@ section#login {
     transform: translate(-50%, -50%);
     overflow: hidden;
     background-color: white;
-    width: 255px;
-    height: 500px;
+    width: 260px;
+    height: 510px;
     border-radius: 20px;
     box-shadow: 0px 0px 5px black;
 
@@ -64,4 +64,83 @@ div#Formulario h1 {
 div#Formulario p {
     font-size: 0.8em;
     text-align: justify;
+}
+
+form div.campo {
+    background-color: #5f2c82;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 8px;
+    margin: 10px 0px;
+}
+
+div.campo label {
+    display: none;
+}
+/* os icones */
+div.campo span {
+    color: white;
+    padding: 10px;
+   /* background-color: black; */
+    height: 100%;
+    font-size: 2em;
+    width: 40px;
+    
+    
+}
+/* o campo do formulario */
+div.campo input {
+   padding: 5px;
+   border-radius: 8px;
+   width: calc(100% - 50px);
+   transform: translateY(-17px);
+   height: 90%;
+   border: 0px;
+
+
+   
+   
+
+    
+}
+
+form input[type=submit] {
+    display: block;
+    font-size: 1em ;
+    width: 100%;
+    height: 30px;
+    background-color: #49a09d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 2px;
+}
+
+form input[type=submit]:hover {
+    background-color: #2d6462;
+}
+
+form a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 30px ;
+    padding-top: 5px;
+    margin-top: 5px;
+    background-color: #4a7977;
+    color: white;
+    border-radius: 5px;
+    text-decoration: none;
+
+}
+
+form a.botao:hover {
+    background-color: #274d4b;
+}
+
+form a.botao span {
+    font-size: 0.8em;
 }
